Fix bugs related to reviewing individual logs

--- a/eventlog/templates/eventlog/view_logs.html
+++ b/eventlog/templates/eventlog/view_logs.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Event: {{ event_name }}</h2>
-<table border="1">
+<table border="1" cellspacing="0" bordercolor="#555555">
     {% if dates %}
         <tr>
             <th>Username</th>
