Add initial CSS

--- a/eventlog/templates/eventlog/view_logs.html
+++ b/eventlog/templates/eventlog/view_logs.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>View Logs</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static "global.css" %}" type="text/css" media="screen" />
 </head>
 <body>
 <h2>Event: {{ event_name }}</h2>
