--- a/eventlog/templates/eventlog/view_minute_logs.html
+++ b/eventlog/templates/eventlog/view_minute_logs.html
@@ -14,6 +14,9 @@
 {% if log_data %}
     {% for day_key, day_values in log_data.items %}
     <h3>{{ day_values.date }}</h3>
+        <p>
+            <b>Caregiver</b>: {{ day_values.adult_steps}} steps, <b>child</b>: {{ day_values.child_steps}} steps<br/>
+        </p>
         {% if day_values.minute_logs %}
         <table border="1" cellspacing="0" bordercolor="#555555">
             {% for min_values in day_values.minute_logs %}
