Finalize the ui for editing geostory

--- a/geostory/templates/geostory/edit_geostory.html
+++ b/geostory/templates/geostory/edit_geostory.html
@@ -2,41 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit a Geostory by {{ geostory.username }}</title>
+    <title>Edit a GeoStory by {{ geostory.username }}</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static "admin/css/base.css" %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{% static "mdc-custom.css" %}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
 </head>
 <body>
-<div id="content" class="flex">
-    <h1>Edit Geostory <a href="{{ geostory.path }}">{{ geostory.storyId }}</a></h1>
-    <div class="module">
-        <p><b>Author</b>: {{ geostory.username }}</p>
-        <p><b>Posted on</b>: {{ geostory.datetimeString }}</p>
-        <p>
-            <b>Neighborhood</b>: {{ geostory.meta.neighborhood }}
-            <a href="https://www.google.com/maps/@{{ geostory.latitude }},{{ geostory.longitude}},16z">&#128204;</a>
-        </p>
-        <p><b>Average steps</b>: {{ geostory.meta.averageSteps }} steps/week</p>
-        <p><b>Bio</b>: {{ geostory.meta.bio }}</p>
-        <p>
-            <b>Audio file</b>: <a href="{{ geostory.storyUri }}">download</a>
-            <!--<audio controls>
-                <source src="{{ geostory.storyUri }}" type="audio/mp4">
-                Your browser does not support the audio element.
-            </audio>-->
-        </p>
-        <form method="post">{% csrf_token %}
-            <fieldset class="module aligned ">
-                <div class="form-row field-user">
-                    {{ geostory_form.as_p }}
-                    {{ meta_form.as_p }}
-                    <input type="submit" value="Save" />
-                </div>
-            </fieldset>
-        </form>
+    <header class="mdc-top-app-bar">
+      <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+          <a class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" href="../all">
+              arrow_back
+          </a>
+          <span class="mdc-top-app-bar__title">Edit Geostory</span>
+        </section>
+      </div>
+    </header>
+    <main class="mdc-body">
+        <div class="mdc-custom-form">
+            <h2>GeoStory Information</h2>
+            <p><label>Author</label> {{ geostory.username }}</p>
+            <p><label>Posted on</label> {{ geostory.datetimeString }}</p>
+            <p>
+                <label>Neighborhood</label> {{ geostory.meta.neighborhood }}
+                <a href="https://www.google.com/maps/@{{ geostory.latitude }},{{ geostory.longitude}},16z"
+                   target="_blank">
+                    &#128204;
+                </a>
+            </p>
+            <p><label>Average steps</label> {{ geostory.meta.averageSteps }} steps/week</p>
+            <p><label>Bio</label> {{ geostory.meta.bio }}</p>
+            <p><label>Firebase</label> <a href="{{ geostory.path }}" target="_blank">{{ geostory.storyId }}</a></p>
+            <p>
+                <label>Audio file</label> <a href="{{ geostory.storyUri }}">download</a>
+                <!--<audio controls>
+                    <source src="{{ geostory.storyUri }}" type="audio/mp4">
+                    Your browser does not support the audio element.
+                </audio>-->
+            </p>
 
-    </div>
-</div>
+            <h2>Meta Information</h2>
+            <form method="post">{% csrf_token %}
+                <fieldset class="module aligned ">
+                    <div class="form-row field-user">
+                        {{ geostory_form.as_p }}
+                        {{ meta_form.as_p }}
+                        <button class="mdc-button" value="Save">
+                            <div class="mdc-button__ripple"></div>
+                            <span class="mdc-button__label">Save</span>
+                        </button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+
+    </main>
 
 
 </body>
