--- a/geostory/templates/geostory/view_all_geostories.html
+++ b/geostory/templates/geostory/view_all_geostories.html
@@ -1,41 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>View All Geostories</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static "mdc-custom.css" %}" type="text/css" media="screen" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@v4.0.0/dist/material-components-web.min.js"></script>
-</head>
+{% include "default_html_head.html" %}
 <body>
-    <header class="mdc-top-app-bar">
-      <div class="mdc-top-app-bar__row">
-        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-          <!--<button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button">menu</button>-->
-          <span class="mdc-top-app-bar__title">GeoStories</span>
-        </section>
-      </div>
-    </header>
-    <aside class="mdc-drawer mdc-permanent-drawer mdc-top-app-bar--fixed-adjust">
-        <div class="mdc-drawer__content">
-            <div class="mdc-list">
-                <a class="mdc-list-item" href="/group/all">
-                    <i class="material-icons mdc-list-item__graphic" aria-hidden="true">group</i>
-                    <span class="mdc-list-item__text">Families</span>
-                </a>
-                <a class="mdc-list-item" href="fitness/all">
-                    <i class="material-icons mdc-list-item__graphic" aria-hidden="true">directions_run</i>
-                    <span class="mdc-list-item__text">Fitness</span>
-                </a>
-                <a class="mdc-list-item mdc-list-item--activated" href="/geostory/all">
-                    <i class="material-icons mdc-list-item__graphic" aria-current="page">chat_bubble</i>
-                    <span class="mdc-list-item__text">GeoStories</span>
-                </a>
-            </div>
-        </div>
-    </aside>
+    {% include "default_header.html" %}
+    {% include "default_nav.html" %}
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
     <main class="main-content" id="main-content">
         <div class="mdc-data-table">
