--- a/user_logging_processor/templates/default_nav.html
+++ b/user_logging_processor/templates/default_nav.html
@@ -1,7 +1,7 @@
     <aside class="mdc-drawer mdc-permanent-drawer mdc-top-app-bar--fixed-adjust">
         <div class="mdc-drawer__content">
             <div class="mdc-list">
-                <a class="mdc-list-item" href="/group/all">
+                <a class="mdc-list-item" href="/family/all">
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">group</i>
                     <span class="mdc-list-item__text">Families</span>
                 </a>
