Add the feature to view family's fitness data

--- a/user_logging_processor/templates/default_nav.html
+++ b/user_logging_processor/templates/default_nav.html
@@ -5,7 +5,7 @@
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">group</i>
                     <span class="mdc-list-item__text">Families</span>
                 </a>
-                <a class="mdc-list-item" href="fitness/all">
+                <a class="mdc-list-item" href="/fitness/all">
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">directions_run</i>
                     <span class="mdc-list-item__text">Fitness</span>
                 </a>
@@ -14,7 +14,7 @@
                     <i class="material-icons mdc-list-item__graphic" aria-current="page">chat_bubble_outline</i>
                     <span class="mdc-list-item__text">GeoStories</span>
                 </a>
-                <a class="mdc-list-item" href="log/all">
+                <a class="mdc-list-item" href="/log/all">
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">bar_chart</i>
                     <span class="mdc-list-item__text">Logging</span>
                 </a>
