Fix UI visual issues

--- a/family/templates/edit_family_setting.html
+++ b/family/templates/edit_family_setting.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     {% include "default_header.html" %}
+    <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
     <main class="mdc-body">
         <div class="mdc-custom-form">
             <h2>Caregiver</h2>
@@ -38,7 +39,6 @@
         </div>
         <br/>
     </main>
-
-
+    </div>
 </body>
 </html>
