--- a/family/templates/view_all_families.html
+++ b/family/templates/view_all_families.html
@@ -5,7 +5,7 @@
     {% include "default_header.html" %}
     {% include "default_nav.html" %}
     <div class="mdc-drawer-app-content mdc-top-app-bar--fixed-adjust">
-    <main class="main-content" id="main-content">
+    <main class="mdc-body">
         <div class="mdc-data-table">
             <table class="mdc-data-table__table" aria-label="GeoStories">
                 <thead>
