--- a/staticfiles/mdc-custom.css
+++ b/staticfiles/mdc-custom.css
@@ -117,6 +117,21 @@ fieldset {
     padding: 16px 12px;
 }
 
+.mdc-custom-form form select {
+    height: 2.5em;
+	font-family: "Roboto", "Helvetica", Verdana, Arial, sans-serif;
+	font-size: 12pt;
+	margin: 8px 0 0 0;
+	border: 1px solid #eeeeee;
+    border-bottom: 2px solid #aaaaaa;
+	border-radius: 4px 4px 0 0;
+    padding: 4px 24px;
+}
+
+.mdc-custom-form .mdc-button {
+    float: right;
+}
+
 img.mdc-data-table-icon {
 	width: 16px;
 	height: 16px;
