Complete the views to view logs

--- a/user_logging/templates/view_all_family_logs.html
+++ b/user_logging/templates/view_all_family_logs.html
@@ -22,7 +22,7 @@
                                 <b>{{ family }}</b>
                             </td>
                             <td class="mdc-data-table__cell">
-                                <a href="/eventlog/refresh/{{ family }}/until/{{ end_date }}/" class="mdc-button">
+                                <a href="refresh/{{ family }}" class="mdc-button">
                                     <div class="mdc-button__ripple"></div>
                                     <i class="material-icons mdc-icon-button__icon">refresh</i>
                                     Refresh Logs
