Refinements for viewing logs

--- a/eventlog/templates/eventlog/view_minute_logs.html
+++ b/eventlog/templates/eventlog/view_minute_logs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Logs</title>
+    <title>{{ user_id}}'s Moments</title>
     {% load static %}
     <link rel="stylesheet" href="{% static "global.css" %}" type="text/css" media="screen" />
     <link rel="stylesheet" href="{% static "global.css" %}" type="text/css" media="print" />
