--- a/user_logging/templates/view_all_family_logs.html
+++ b/user_logging/templates/view_all_family_logs.html
@@ -22,15 +22,15 @@
                                 <b>{{ family }}</b>
                             </td>
                             <td class="mdc-data-table__cell">
-                                <a href="refresh/{{ family }}" class="mdc-button">
-                                    <div class="mdc-button__ripple"></div>
-                                    <i class="material-icons mdc-icon-button__icon">refresh</i>
-                                    Refresh Logs
-                                </a>
                                 <a href="range/{{ family }}" class="mdc-button">
                                     <div class="mdc-button__ripple"></div>
                                     <i class="material-icons mdc-icon-button__icon">bar_chart</i>
                                     View Logs
+                                </a>
+                                <a href="refresh/{{ family }}" class="mdc-button">
+                                    <div class="mdc-button__ripple"></div>
+                                    <i class="material-icons mdc-icon-button__icon">sync</i>
+                                    Refresh Logs
                                 </a>
                             </td>
                         </tr>
