--- a/user_logging_processor/templates/default_nav.html
+++ b/user_logging_processor/templates/default_nav.html
@@ -1,6 +1,14 @@
     <aside class="mdc-drawer mdc-permanent-drawer mdc-top-app-bar--fixed-adjust">
         <div class="mdc-drawer__content">
             <div class="mdc-list">
+                {%  if nav %}
+                    {% for key, value in nav.items %}
+                <a class="mdc-list-item {% if value.is_active %}mdc-list-item--activated{% endif %}" href="{{  value.uri }}">
+                    <i class="material-icons mdc-list-item__graphic" aria-hidden="true">{{  value.mdc_icon }}</i>
+                    <span class="mdc-list-item__text">{{  value.title }}</span>
+                </a>
+                    {% endfor %}
+                {%  else %}
                 <a class="mdc-list-item" href="/family/all">
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">group</i>
                     <span class="mdc-list-item__text">Families</span>
@@ -18,6 +26,7 @@
                     <i class="material-icons mdc-list-item__graphic" aria-hidden="true">bar_chart</i>
                     <span class="mdc-list-item__text">Logging</span>
                 </a>
+                {%  endif %}
             </div>
         </div>
     </aside>
